GNOME Bugzilla – Bug 707820
Version numbers not detailed enough
Last modified: 2013-10-08 10:40:53 UTC
I am currently seeing a firefox update in the updates page. It say 23.0.1 in the version field. But if I go to the installed page, it shows just the same version for firefox. Thats a bit confusing. pkgcon get-update-details reveals that the available update is from 23.0.1-4.fc20 to 23.0.1-5.fc20.
I asked Jakub before and he said not to show revision numbers at all and just show the main version number. I guess we could show the revision if the version and update_version are the same although that needs a bit of trickery in GsApp.
Another place where it is going to be odd is the history list. If a package gets many revisions, you may see the same version number multiple times in a row
commit f47b7d9db4877a845b3a96eeb8b1ad80534bae32 Author: Richard Hughes <richard@hughsie.com> Date: Tue Oct 8 10:58:26 2013 +0100 Show more detailed version numbers when required If we make the version numbers 'pretty' we can get to a situation where we show the same version string for the installed package *and* the update. If this happens, make the version number progressively more un-pretty until the version numbers differ. Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=707820