Show more detailed version numbers when required

If we make the version numbers 'pretty' we can get to a situation where we show
the same version string for the installed package *and* the update.
If this happens, make the version number progressively more un-pretty until the
version numbers differ.

Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=707820