src/gs-app-widget.c
@@ -89,10 +89,10 @@ gs_app_widget_refresh (GsAppWidget *app_widget)
 	if (priv->show_update &&
 	    gs_app_get_state (priv->app) == GS_APP_STATE_UPDATABLE) {
 		gtk_label_set_label (GTK_LABEL (priv->version_label),
-				     gs_app_get_update_version (priv->app));
+				     gs_app_get_update_version_ui (priv->app));
 	} else {
 		gtk_label_set_label (GTK_LABEL (priv->version_label),
-				     gs_app_get_version (priv->app));
+				     gs_app_get_version_ui (priv->app));
 	}
 	if (gs_app_get_pixbuf (priv->app))
 		gtk_image_set_from_pixbuf (GTK_IMAGE (priv->image),
