src/gs-shell-updates.c
@@ -226,7 +226,7 @@ gs_shell_updates_set_updates_description_ui (GsShellUpdates *shell_updates, GsAp
 	} else {
 		tmp = g_strdup_printf ("%s %s",
 				       gs_app_get_source (app),
-				       gs_app_get_update_version (app));
+				       gs_app_get_update_version_ui (app));
 		gtk_window_set_title (GTK_WINDOW (widget), tmp);
 		g_free (tmp);
 	}
@@ -308,7 +308,7 @@ show_update_details (GsApp *app, GsShellUpdates *shell_updates)
 			gtk_widget_set_halign (label, GTK_ALIGN_START);
 			gtk_widget_set_valign (label, GTK_ALIGN_CENTER);
 			gtk_box_pack_start (GTK_BOX (row), label, TRUE, TRUE, 0);
-			label = gtk_label_new (gs_app_get_update_version (app_related));
+			label = gtk_label_new (gs_app_get_update_version_ui (app_related));
 			g_object_set (label,
 				      "margin-left", 20,
 				      "margin-right", 20,
